--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
   <body>
     <div class="container"></div>
   </body>
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
   <script type="text/javascript" src="bundle.js"></script>
 </html>
