--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>udemy react</title>
-    <link rel="stylesheet" href="bundle.css">
+    <link rel="stylesheet" href="/bundle.css">
   </head>
   <body>
     <div class="container"></div>
   </body>
   <script src="https://maps.googleapis.com/maps/api/js"></script>
-  <script type="text/javascript" src="bundle.js"></script>
+  <script type="text/javascript" src="/bundle.js"></script>
 </html>
