--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>udemy react</title>
-    <link rel="stylesheet" href="/bundle.css">
+    <title>hotel search</title>
+    <link rel="stylesheet" href="./bundle.css">
   </head>
   <body>
     <div class="container"></div>
   </body>
   <script src="https://maps.googleapis.com/maps/api/js"></script>
-  <script type="text/javascript" src="/bundle.js"></script>
+  <script type="text/javascript" src="./bundle.js"></script>
 </html>
